--- a/views/post.mustache
+++ b/views/post.mustache
@@ -1,242 +1,117 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
 <head>
-  {{>head}}
-  <meta property="og:title" content="Vertex 360 | {{post.title}}" />
-	<meta property="og:type" content="article" />
-	<meta property="og:url" content="https://www.vertex360.co/post/{{post.slug}}" />
-	<meta property="og:image" content="{{{post.image}}}=s260-c" />
-	<meta property="og:image:width" content="260px" />
-	<meta property="og:image:height" content="260px" />
-	<meta property="og:description" content="{{post.preview}}" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>{{post.title}}</title>
+    <meta name="description" content="{{post.preview}}" />
+    <link rel="icon" href="https://lh3.googleusercontent.com/5SVrpLI9utkuVJbQb48cpD3tar59mgWaWSAM73Ghj8dxFJMD2UOzkhO5ptWDd2uV2eqgSvDCSa-Ad8aOrygXx6nv=s32-c" type="image/png" />
 
-  <style>
-    .btn-edit {
-      text-transform: uppercase;
-      font-size: 9.7px;
-      letter-spacing: 2.5px;
-      font-weight: 60;
-      background: #f91942;
-      border-radius: 24px;
-      padding: 8px 12px;
-      line-height: 20px;
-      color: #fff !important;
-      font-weight: 400;
-      margin-bottom: 9px;
-    }
+    <meta property="og:title" content="Vertex 360 | {{post.title}}" />
+  	<meta property="og:type" content="article" />
+  	<meta property="og:url" content="https://www.vertex360.co/post/{{post.slug}}" />
+  	<meta property="og:image" content="{{{post.image}}}=s260-c" />
+  	<meta property="og:image:width" content="260px" />
+  	<meta property="og:image:height" content="260px" />
+  	<meta property="og:description" content="{{post.preview}}" />
 
-    @media (min-width: 768px) {
-      .post-container {
-        padding-top: 120px
+    <link href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/inter-ui.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/slick.min.css">
+    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/slick-theme.min.css">
+    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/blue.css" id="theme-color">
+
+		<style>
+			.logo {
+				width: 160px;
+			}
+
+      .post-content p {
+        margin-bottom: 0px;
+        line-height: 2.0;
+        font-size: 18px;
       }
 
-      .lg-pt-40 {
-        padding-top: 40px;
+      .post-content img {
+        margin: 12px 0px;
       }
-    }
 
-    @media (max-width: 768px) {
-      .post-content {
-        padding: 16px !important;
+      .post-header small {
+        font-size: 14px;
       }
-    }
 
-    .post-content img {
-      min-width: 320px;
-    }
+      .post-header hr {
+        border-top: 1px solid #ddd;
+      }
 
-    .post-content a {
-      color: red;
-    }
-  </style>
+      .icon-avatar {
+        border-radius: 50%;
+        margin-right: 6px;
+        padding: 4px;
+        border: 1px solid #56b48c;
+      }
+
+      .author-container {
+        display: flex;
+        border-top: 1px solid #ddd;
+        margin-top: 40px;
+        padding: 20px 0px
+      }
+
+      .author-container h3 {
+        text-transform: capitalize;
+      }
+		</style>
 </head>
+    <body>
+      {{>nav}}
 
-<body>
+        <!-- features section -->
+        <section class="py-6" id="features" style="background:#f9f9f9">
+            <div class="container mt-4">
+                <div class="row">
+                    <div class="col-md-10 col-lg-8 mx-auto">
+                        <div class="post-header">
+                          <h1>{{post.title}}</h1>
+                          <img class="icon-avatar" src="{{{post.author.image}}}=s34-c" />
+                          <small>{{post.author.username}}</small>
+                          <span style="margin:16px">&bull;</span>
+                          <small>{{post.dateString}}</small>
+                          <hr />
+                          <img style="max-width:100%" src="{{{post.image}}}=s400" />
+                        </div>
+                    </div>
+                </div>
 
-<div id="wrapper" style="background:#f9f9f9">
-  {{>nav}}
-  <div class="clearfix"></div>
-  <div class="container lg-pt-40">
-    <div class="row post-container">
-  		<div class="col-lg-9 col-md-8 padding-right-30">
-  			<div class="blog-post single-post">
+                <div class="row mt-4">
+                    <div class="col-sm-8 mx-auto">
+                      <div class="post-content">
+                        {{{post.text}}}
+                      </div>
+                      <div class="author-container">
+                        <div style="">
+                          <img class="icon-avatar" src="{{{post.author.image}}}=s48-c" />
+                        </div>
+                        <div style="flex:1;padding-left:12px">
+                          <h3>{{post.author.firstName}} {{post.author.lastName}}</h3>
+                          <p class="text-muted">{{post.author.bio}}</p>
+                        </div>
+                      </div>
+                    </div>
+                </div>
 
-  				<div class="post-content">
-            <h1 style="font-size:32px">{{post.title}}</h1>
-            <ul class="post-meta">
-  						<li>{{post.dateString}}</li>
-  						<li><a style="color:#37b6bd" href="/profile/{{post.author.slug}}">{{post.author.username}}</a></li>
-              {{#isAuthor}}
-              <li><a href="/submitpost?id={{post.id}}" class="btn-edit">Edit Post</a></li>
-              {{/isAuthor}}
-  					</ul>
-            <hr class="margin-top-20 margin-bottom-30" />
-            <img class="post-img" src="{{{post.image}}}=s1024" alt="Vertex 360 | {{post.title}}">
-  					{{{post.text}}}
-  				</div>
+            </div>
+        </section>
 
-          <!-- About Author -->
-    			<div class="about-author" style="margin:0px;border-top:1px solid #ededed;background:#fffffa">
-            <a href="/profile/{{post.author.slug}}">
-      				<img src="{{{post.author.image}}}=s260-c" alt="Vertex 360 | {{post.author.firstName}} {{post.author.lastName}}" />
-            </a>
-    				<div class="about-description" style="min-height:120px">
-              <a href="/profile/{{post.author.slug}}">
-    					  <h4 class="margin-bottom-0 capitalize">{{post.author.firstName}} {{post.author.lastName}}</h4>
-              </a>
-    					<a href="/profile/{{post.author.slug}}">{{post.author.username}}</a>
-    					<p>{{{post.author.bio}}}</p>
-    				</div>
-    			</div>
-  			</div>
+        {{>register}}
+        {{>footer}}
 
-  			<!-- Related Posts -->
-  			<div class="clearfix"></div>
-        <hr />
-  			<h3 class="headline margin-top-25 margin-bottom-10">Launch Your Website</h3>
-        <p>Create fully-featured professional websites in minutes. Select a template below to get started.</p>
-  			<div id="featured-templates" class="row"></div>
-  			<div class="margin-top-50"></div>
-  	</div>
-
-
-  	<!-- Widgets -->
-  	<div class="col-lg-3 col-md-4">
-  		<div class="sidebar right">
-  			<div class="widget margin-top-40">
-  				<h3>Recent Posts</h3>
-  				<ul id="recent-posts" class="widget-tabs"></ul>
-  			</div>
-  		</div>
-  	</div>
-  	</div>
-  	<!-- Sidebar / End -->
-
-  </div>
-
-  {{>footer-dark}}
-</div>
-<!-- Wrapper / End -->
-
-<script type="text/template" id="tpl-post-preview">
-  <li>
-    <div class="widget-content">
-        <div class="widget-thumb">
-        <a href="/post/<% slug %>">
-          <img src="<%{image}%>=s120-c" alt="Vertex 360 | <% title %>">
-        </a>
-      </div>
-
-      <div class="widget-text" style="padding-top:6px">
-        <h5 class="preview-title">
-          <a href="/post/<% slug %>"><% title %></a>
-        </h5>
-        <small><% dateString %></small>
-      </div>
-      <div class="clearfix"></div>
-    </div>
-  </li>
-</script>
-
-<script type="text/template" id="tpl-site-preview">
-  <div class="col-lg-6 col-md-6">
-    <a href="/template/<% slug %>" class="listing-item-container compact">
-      <div class="listing-item">
-        <img src="<%{image}%>=s1024-c" alt="Vertex 360">
-        <div class="listing-item-content">
-          <h3 style="line-height:22px;text-transform:capitalize"><% name %></h3>
-          <small style="color:#999;font-size:16px"><% template.category %></small>
-        </div>
-      </div>
-    </a>
-  </div>
-</script>
-
-<script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
-<script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
-<script type="text/javascript" src="{{{cdn}}}/dist/js/referrer.min.js"></script>
-<script>
-  (function(){
-    Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
-    var data = window.__PRELOADED__
-    var getRequest = function(url, completion){
-      $.ajax({
-        url: url,
-        type: 'GET',
-        data: null,
-        success: function(response){
-          completion(null, response)
-        },
-        error: function(response){
-          completion(response, null)
-        }
-      })
-    }
-
-    getRequest('/api/post?limit=5', function(err, response){
-      if (response.confirmation != 'success'){
-        return
-      }
-
-      var posts = response.results
-      var tpl = $('#tpl-post-preview').html()
-      var postsHtml = ''
-      posts.forEach(function(post){
-        postsHtml += Mustache.render(tpl, post)
-      })
-
-      $('#recent-posts').html(postsHtml)
-      getRequest('/api/site?template.status=live&format=vertex&limit=4', function(err, response){
-        if (response.confirmation != 'success'){
-          return
-        }
-
-        // console.log('SITES: ' + JSON.stringify(response))
-        var sites = response.results
-        var tpl = $('#tpl-site-preview').html()
-        var sitesHtml = ''
-        sites.forEach(function(site){
-          sitesHtml += Mustache.render(tpl, site)
-        })
-
-        $('#featured-templates').html(sitesHtml)
-      })
-    })
-
-    $('#btn-newsletter-subscribe').click(function(event){
-      if (event)
-        event.preventDefault()
-
-      var subscriber = {
-//        name: $('#input-newsletter-name').val(),
-        email: $('#input-newsletter-email').val()
-      }
-
-      if (subscriber.email.length == 0){
-        alert('Please enter your EMAIL')
-        return
-      }
-
-      $.ajax({
-        url: '/account/mailchimp',
-        type: 'POST',
-        data: subscriber,
-        success: function(response){
-          if (response.confirmation != 'success'){
-            alert('Error - '+response.message)
-            return
-          }
-
-          alert('Thanks For Subscribing!')
-        },
-        error: function(err){
-          alert('Error - ' + err)
-        }
-      })
-    })
-
-  })()
-</script>
-
-{{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
-</body>
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/jquery-3.2.1.min.js"></script>
+        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/popper.min.js"></script>
+        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/bootstrap.min.js"></script>
+        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/feather.min.js"></script>
+        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/slick.min.js"></script>
+        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/scripts.js"></script>
+    </body>
 </html>
