--- a/views/template.mustache
+++ b/views/template.mustache
@@ -16,11 +16,11 @@
   	<meta property="og:description" content="{{template.description}}" />
 
 
-    <link href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/inter-ui.css" rel="stylesheet">
+    <link href="{{{cdn}}}/snap/css/inter-ui.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/slick.min.css">
-    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/slick-theme.min.css">
-    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/blue.css" id="theme-color">
+    <link rel="stylesheet" href="{{{cdn}}}/snap/css/slick.min.css">
+    <link rel="stylesheet" href="{{{cdn}}}/snap/css/slick-theme.min.css">
+    <link rel="stylesheet" href="{{{cdn}}}/snap/css/blue.css" id="theme-color">
 
     <style>
 			.logo {
@@ -134,12 +134,14 @@
         {{>register}}
         {{>footer}}
 
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/jquery-3.2.1.min.js"></script>
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/popper.min.js"></script>
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/bootstrap.min.js"></script>
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/feather.min.js"></script>
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/slick.min.js"></script>
-        <script src="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/js/scripts.js"></script>
+        <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
+        <script src="{{{cdn}}}/snap/js/jquery-3.2.1.min.js"></script>
+        <script src="{{{cdn}}}/snap/js/popper.min.js"></script>
+        <script src="{{{cdn}}}/snap/js/bootstrap.min.js"></script>
+        <script src="{{{cdn}}}/snap/js/feather.min.js"></script>
+        <script src="{{{cdn}}}/snap/js/slick.min.js"></script>
+        <script src="{{{cdn}}}/snap/js/scripts.js"></script>
+        <script src="{{{cdn}}}/scripts/auth.js"></script>
+        {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
     </body>
 </html>
