--- a/views/index.mustache
+++ b/views/index.mustache
@@ -15,11 +15,11 @@
   	<meta property="og:image:height" content="260px" />
   	<meta property="og:description" content="Vertex 360 is a powerful, fully featured, easy website builder made for busy people. Create your website in under an hour by selecting one of our professional templates and simply updating it with your content. No more messing with confusing editors, drag & drop tools, or ridiculously complicated features for 'beginners'. On Vertex 360, simply input your text and images and move on with your life, business, family - the important stuff." />
 
-    <link href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/inter-ui.css" rel="stylesheet">
+    <link href="{{{cdn}}}/snap/css/inter-ui.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/slick.min.css">
-    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/slick-theme.min.css">
-    <link rel="stylesheet" href="https://cdn.turbo360-vertex.com/vertex360-cms-4hujkc/public/snap/css/blue.css" id="theme-color">
+    <link rel="stylesheet" href="{{{cdn}}}/snap/css/slick.min.css">
+    <link rel="stylesheet" href="{{{cdn}}}/snap/css/slick-theme.min.css">
+    <link rel="stylesheet" href="{{{cdn}}}/snap/css/blue.css" id="theme-color">
 
 		<style>
 			.logo {
@@ -419,8 +419,6 @@
         </script>
 
         <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="{{{cdn}}}/snap/js/jquery-3.2.1.min.js"></script>
         <script src="{{{cdn}}}/snap/js/popper.min.js"></script>
         <script src="{{{cdn}}}/snap/js/bootstrap.min.js"></script>
@@ -571,5 +569,7 @@
             })
           })()
         </script>
+
+        {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
     </body>
 </html>
