--- a/views/post.mustache
+++ b/views/post.mustache
@@ -14,13 +14,7 @@
   	<meta property="og:image:height" content="260px" />
   	<meta property="og:description" content="{{post.preview}}" />
 
-    <link rel="icon" href="https://lh3.googleusercontent.com/5SVrpLI9utkuVJbQb48cpD3tar59mgWaWSAM73Ghj8dxFJMD2UOzkhO5ptWDd2uV2eqgSvDCSa-Ad8aOrygXx6nv=s32-c" type="image/png" />
-    <link href="{{{cdn}}}/snap/css/inter-ui.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{{{cdn}}}/snap/css/slick.min.css">
-    <link rel="stylesheet" href="{{{cdn}}}/snap/css/slick-theme.min.css">
-    <link rel="stylesheet" href="{{{cdn}}}/snap/css/blue.css" id="theme-color">
-
+    {{>styles}}
 		<style>
 			.logo {
 				width: 160px;
