--- a/views/index.mustache
+++ b/views/index.mustache
@@ -376,50 +376,8 @@
 
         {{>register}}
         {{>footer}}
-
-        <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
-        <script>
-          var vertexLib = {
-            postRequest: function(url, params, completion){
-              $.ajax({
-                url: url,
-                type: 'POST',
-                data: params,
-                success: function(response){
-                  completion(null, response)
-                },
-                error: function(response){
-                  completion(response, null)
-                }
-              })
-            },
-
-            getRequest: function(url, params, completion){
-              $.ajax({
-                url: url,
-                type: 'GET',
-                data: params,
-                success: function(response){
-                  completion(null, response)
-                },
-                error: function(response){
-                  completion(response, null)
-                }
-              })
-            }
-          }
-
-          window.vertexLib = vertexLib
-        </script>
-
+        {{>scripts}}
         <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-        <script src="{{{cdn}}}/snap/js/jquery-3.2.1.min.js"></script>
-        <script src="{{{cdn}}}/snap/js/popper.min.js"></script>
-        <script src="{{{cdn}}}/snap/js/bootstrap.min.js"></script>
-        <script src="{{{cdn}}}/snap/js/feather.min.js"></script>
-        <script src="{{{cdn}}}/snap/js/slick.min.js"></script>
-        <script src="{{{cdn}}}/snap/js/scripts.js"></script>
-        <script src="{{{cdn}}}/scripts/auth.js"></script>
         <script>
           (function(){
             var data = window.__PRELOADED__
@@ -564,6 +522,5 @@
           })()
         </script>
 
-        {{#renderAnalytics}}{{>analytics}}{{/renderAnalytics}}
     </body>
 </html>
