--- a/views/template.mustache
+++ b/views/template.mustache
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{template.name}}</title>
-    <meta name="description" content="{{template.description}}" />
+    <meta name="description" content="{{template.preview}}" />
 
     <meta property="og:title" content="Vertex 360 | {{template.name}}" />
   	<meta property="og:type" content="article" />
@@ -12,7 +12,7 @@
   	<meta property="og:image" content="{{{template.image}}}=s260-c" />
   	<meta property="og:image:width" content="260px" />
   	<meta property="og:image:height" content="260px" />
-  	<meta property="og:description" content="{{template.description}}" />
+  	<meta property="og:description" content="{{template.preview}}" />
 
     {{>styles}}
     <style>
