--- a/views/template.mustache
+++ b/views/template.mustache
@@ -104,7 +104,7 @@
                           </a>
                           {{/template.images}}
 
-                          <a href="/templates" class="btn btn-primary d-inline-flex flex-row align-items-center text-white btn-lg btn-get-started bg-green">
+                          <a href="#" data-toggle="modal" data-target="#launch-template-modal" class="btn btn-primary d-inline-flex flex-row align-items-center text-white btn-lg btn-get-started bg-green">
                               Launch This Template
                           </a>
                         </div>
@@ -123,6 +123,26 @@
 
             </div>
         </section>
+
+        <div class="modal fade" id="launch-template-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content" style="border-radius:4px">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Launch Template</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <img src="{{{template.image}}}=s512" />
+              </div>
+              <div class="modal-footer">
+                <input style="background:#fffffa" class="form-control" type="text" id="site-name" placeholder="Enter Site Name" />
+                <button type="button" class="btn btn-primary">Launch!</button>
+              </div>
+            </div>
+          </div>
+        </div>
 
         {{>register}}
         {{>footer}}
