--- a/views/template.mustache
+++ b/views/template.mustache
@@ -134,10 +134,12 @@
                 </button>
               </div>
               <div class="modal-body">
-                <img src="{{{template.image}}}=s512" />
+                <img style="max-width:100%" src="{{{template.image}}}=s750" />
+                <p class="text-center">To launch this template on your account and update its configuration with your content, enter the name of your site below.</p>
+                <hr />
               </div>
-              <div class="modal-footer">
-                <input style="background:#fffffa" class="form-control" type="text" id="site-name" placeholder="Enter Site Name" />
+              <div class="modal-footer pt-0">
+                <input style="background:#fffffa" class="form-control" type="text" id="site-name" placeholder="Your Site Name" />
                 <button type="button" class="btn btn-primary">Launch!</button>
               </div>
             </div>
