--- a/views/template.mustache
+++ b/views/template.mustache
@@ -135,7 +135,7 @@
               </div>
               <div class="modal-body">
                 <img style="max-width:100%" src="{{{template.image}}}=s750" />
-                <p class="text-center">To launch this template on your account and update its configuration with your content, enter the name of your site below.</p>
+                <p class="text-center mt-4">To launch this template on your account and update its configuration with your content, enter the name of your site below.</p>
                 <hr />
               </div>
               <div class="modal-footer pt-0">
