--- a/views/partials/footer.mustache
+++ b/views/partials/footer.mustache
@@ -3,11 +3,9 @@
 				<div class="row">
 						<div class="col-md-6 mx-auto text-center">
 								<ul class="list-inline">
-										<li class="list-inline-item"><a href="#">Privacy</a></li>
-										<li class="list-inline-item"><a href="#">Terms</a></li>
-										<li class="list-inline-item"><a href="#">Affiliates</a></li>
-										<li class="list-inline-item"><a href="#">Support</a></li>
-										<li class="list-inline-item"><a href="#">Blog</a></li>
+										<li class="list-inline-item"><a href="/">Home</a></li>
+										<li class="list-inline-item"><a href="/templates">Templates</a></li>
+										<li class="list-inline-item"><a href="/blog">Blog</a></li>
 								</ul>
 								<ul class="list-inline social social-dark social-sm">
 										<li class="list-inline-item">
