launch template functions

--- a/views/partials/scripts.mustache
+++ b/views/partials/scripts.mustache
@@ -32,6 +32,7 @@
   window.vertexLib = vertexLib
 </script>
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
+<script src="{{{cdn}}}/js/mustache.js"></script>
 <script src="{{{cdn}}}/snap/js/jquery-3.2.1.min.js"></script>
 <script src="{{{cdn}}}/snap/js/popper.min.js"></script>
 <script src="{{{cdn}}}/snap/js/bootstrap.min.js"></script>
