--- a/views/template.mustache
+++ b/views/template.mustache
@@ -162,14 +162,21 @@
               var body = {template:siteSlug}
               window.vertexLib.postRequest('/account/check-template', body, function(err, response){
                 if (err){
-                  console.log('TEMPLATE NOT READY: ' + siteSlug)
+                  // console.log('TEMPLATE NOT READY: ' + siteSlug)
                   setTimeout(function(){
                     checkTemplate(siteSlug)
                   }, 4000)
                   return
                 }
 
-                console.log('CHECK TEMPLATE: ' + JSON.stringify(response))
+                if (response.confirmation != 'success'){
+                  setTimeout(function(){
+                    checkTemplate(siteSlug)
+                  }, 4000)
+                  return
+                }
+
+                // console.log('CHECK TEMPLATE: ' + JSON.stringify(response))
                 if (response.confirmation != 'success'){
                   alert('Error - ' + response.message)
                   return
