--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -11,16 +11,16 @@
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 				<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
-								<a class="nav-link page-scroll" href="/">Home</a>
+								<a class="nav-link" href="/">Home</a>
 						</li>
 						<li class="nav-item">
-								<a class="nav-link page-scroll" href="/templates">Templates</a>
+								<a class="nav-link" href="/templates">Templates</a>
 						</li>
 						<li class="nav-item">
-								<a class="nav-link page-scroll" href="/blog">Blog</a>
+								<a class="nav-link" href="/blog">Blog</a>
 						</li>
 						<li id="login-container" class="nav-item">
-								<a style="border-radius:6px;color:#fff" class="nav-link page-scroll btn btn-primary" href="#">Join</a>
+								<a style="border-radius:6px;color:#fff" class="nav-link btn btn-primary" href="#">Join</a>
 						</li>
 				</ul>
 		</div>
