add logo to modal

--- a/views/template.mustache
+++ b/views/template.mustache
@@ -142,6 +142,9 @@
                 <input style="background:#fffffa" class="form-control" type="text" id="input-site-name" placeholder="Your Site Name" />
                 <button id="btn-launch-template" type="button" class="btn btn-primary">Launch!</button>
               </div>
+              <div class="text-center" style="padding:1.5rem">
+                <img style="width:160px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+              </div>
             </div>
           </div>
         </div>
