--- a/views/partials/scripts.mustache
+++ b/views/partials/scripts.mustache
@@ -1,3 +1,25 @@
+<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content" style="border-radius:4px">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <input style="background:#fffffa" class="form-control mb-4" type="text" placeholder="Email" />
+        <input style="background:#fffffa" class="form-control mb-4" type="password" placeholder="Password" />
+        <button style="width:100%" type="button" class="btn btn-primary btn-lg">Login</button>
+        <hr />
+      </div>
+      <div class="text-center" style="padding:1.5rem">
+        <img style="width:160px" src="https://lh3.googleusercontent.com/hlcLdauNL9UiLa3K4wF5ZPNpHzi50R26y61Ahx7oRMbUNgujN-1SmeC_3zG4EHLBH5WnRhQ1ZS19KF_xcWqkTKoENw=s320" />
+      </div>
+    </div>
+  </div>
+</div>
+
 <script>
   var vertexLib = {
     postRequest: function(url, params, completion){
