--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -20,7 +20,7 @@
 								<a class="nav-link" href="/blog">Blog</a>
 						</li>
 						<li id="login-container" class="nav-item">
-								<a style="border-radius:6px;color:#fff" class="nav-link btn btn-primary" href="#">Join</a>
+								<a data-toggle="modal" data-target="#login-modal" style="border-radius:6px;color:#fff" class="nav-link btn btn-primary" href="#">Login</a>
 						</li>
 				</ul>
 		</div>
