--- a/views/partials/scripts.mustache
+++ b/views/partials/scripts.mustache
@@ -8,8 +8,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <input style="background:#fffffa" class="form-control mb-4" type="text" placeholder="Email" />
-        <input style="background:#fffffa" class="form-control mb-4" type="password" placeholder="Password" />
+        <input id="input-login-email" style="background:#fffffa" class="form-control mb-4" type="text" placeholder="Email" />
+        <input id="input-login-password" style="background:#fffffa" class="form-control mb-4" type="password" placeholder="Password" />
         <button style="width:100%" type="button" class="btn btn-primary btn-lg">Login</button>
         <hr />
       </div>
