--- a/views/index.mustache
+++ b/views/index.mustache
@@ -245,19 +245,13 @@
                             </div>
                         </div>
                         <div class="review text-center">
-                            <p class="quote">Integer id ante posuere, vestibulum mauris eget, efficitur felis.</p>
+                            <p class="quote">Vertex 360 makes it really easy to plug in my designs into fully functional websites so I can run my web design business.</p>
                             <div class="mt-4 d-flex flex-row align-items-center justify-content-center">
-                                <img src="https://lh3.googleusercontent.com/u--WLrw0LJJ5rGHBcNOAD4D9wHtHy8H4sBvuHMsYRUEKQjRkaxgHpICdLE_Izkh6yxGernINoSCR4ZS-Hl4MnOOy" class="img-review rounded-circle mr-2" alt="Client 2"/>
-                                <span class="text-muted">Ameli Mao, VP Facebook</span>
+                                <img src="https://lh3.googleusercontent.com/Qekgyu2ks1XyWPKsP_6JTx1aWdOMNLfeZk0_VQJmKeSaBkkx6jKOYZxeW6_DivAiuofnLNaGcHIVXVetw6F3byIhxA" class="img-review rounded-circle mr-2" alt="Client 2"/>
+                                <span class="text-muted">Tabitha I., Web Designer</span>
                             </div>
                         </div>
-                        <div class="review text-center">
-                            <p class="quote">Praesent vulputate dolor velit, pellentesin condimentum odio pellentesque libero.</p>
-                            <div class="mt-4 d-flex flex-row align-items-center justify-content-center">
-                                <img src="https://lh3.googleusercontent.com/fykJCmNPe3VmGxdwodXXupMBFAkp7SIVdSVYS3CqX9JN25e3QDKkEqGnyMYBxIpN_zHDRsiLTd-u0y2ycPVQe5P9Sw" class="img-review rounded-circle mr-2" alt="Client 3"/>
-                                <span class="text-muted">Kathrine Jones, Twitter</span>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
